--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -5,7 +5,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=U, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
   <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>{% block title %}{% endblock %}</title>
 </head>
 
@@ -17,26 +19,28 @@
     <div>
       <!-- Navbar (Full Width) -->
       <div class="navbar bg-base-100 w-full border-b-2 border-base-900">
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-          <div class="w-10 rounded-full">
-            <img alt="Tailwind CSS Navbar component"
-              src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        <a href="{% url 'profile' %}">
+          <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+            <div class="w-10 rounded-full">
+              <img alt="Tailwind CSS Navbar component" src="../../static/Profile.png" />
+            </div>
           </div>
-        </div>
-        <div class="pl-4">
-          <div class="flex flex-col">
-            <div class="text-lg font-bold">PengPeng</div>
-            <div class="text-xs text-gray-900">Admin</div>
+          <div class="pl-4">
+            <div class="flex flex-col">
+              <div
+                class="text-lg font-bold {% if request.path == '/admin-system/profile/' %} text-orange-500 font-bold{% endif %}">
+                PengPeng</div>
+              <div class="text-xs text-gray-900">Admin</div>
+            </div>
           </div>
-        </div>
+        </a>
 
         <div class="divider divider-horizontal"></div>
         <div class="flex flex-row justify-between w-full">
           <div class="font-bold ml-4">{% block heading %}{% endblock %}</div>
-          <button class="btn btn-outline btn-error mr-4" id="logout-btn">
-            LOGOUT
-          </button>
+          <button class="btn btn-outline btn-error mr-4" id="logout-btn">Logout</button>
         </div>
+
       </div>
 
       <!-- Page Content -->
@@ -47,7 +51,8 @@
         <div class="mt-4">
           <ul class="menu">
             <li class="py-2">
-              <a href="{% url 'dashboard' %}" class="flex items-center" {% if request.path=='/solar-system/dashboard/'%} style="color: #f97316; font-weight: bold; background-color: #fff7ed;" {% endif %}>
+              <a href="{% url 'dashboard' %}"
+                class="flex items-center {% if request.path == '/solar-system/dashboard/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
@@ -56,9 +61,8 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="{% url 'users_management' %}" class="flex items-center" {% if
-                request.path=='/solar-system/users_management/' %}
-                style="color: #f97316; font-weight: bold; background-color: #fff7ed;" {% endif %}>
+              <a href="{% url 'users_management' %}"
+                class="flex items-center {% if request.path == '/solar-system/users_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -68,9 +72,8 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="{% url 'solar_management' %}" class="flex items-center" {% if
-                request.path=='/solar-system/solar_management/' %}
-                style="color: #f97316; font-weight: bold; background-color: #fff7ed;" {% endif %}>
+              <a href="{% url 'solar_management' %}"
+                class="flex items-center {% if request.path == '/solar-system/solar_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -80,9 +83,8 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="{% url 'upload_history' %}" class="flex items-center" {% if
-                request.path=='/solar-system/upload_history/' %}
-                style="color: #f97316; font-weight: bold; background-color: #fff7ed;" {% endif %}>
+              <a href="{% url 'upload_history' %}"
+                class="flex items-center {% if request.path == '/solar-system/upload_history/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -92,8 +94,8 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="{% url 'reports' %}" class="flex items-center" {% if request.path=='/solar-system/reports/' %}
-                style="color: #f97316; font-weight: bold; background-color: #fff7ed;" {% endif %}>
+              <a href="{% url 'reports' %}"
+                class="flex items-center {% if request.path == '/solar-system/reports/' %}bg-orange-100  text-orange-500 font-bold{% endif %}">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -109,7 +111,7 @@
 
       <!-- Main Content Area -->
       <div class="flex-1 flex items-center justify-center">
-        <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl p-4">
+        <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl">
           <!-- Your content inside the box -->
           {% block content %} {% endblock %}
         </div>
