--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -102,7 +102,8 @@
             body: JSON.stringify({
                 username: username,
                 password: password
-            })
+            }),
+            credentials: 'include'
         })
             .then(response => {
                 if (!response.ok) {
