add field display_name in CustomUser model and set it all 3 login method

--- a/myadmin/templates/profile.html
+++ b/myadmin/templates/profile.html
@@ -9,7 +9,11 @@
     <div class="bg-[#FFF4E0] w-full h-64 -translate-y-6 rounded-b-3xl z-20 relative">
         <h2 class="text-black text-3xl font-bold pt-[80px] pl-6 flex items-center gap-2">
             {{ username }}
-            <a href="#"><img src="../../static/Edit-solar.svg" alt="edit" class="inline-block w-5 h-5"></a>
+            <a href="#" >
+                <img src="../../static/Edit-solar.svg" alt="edit" class="inline-block w-5 h-5">
+              </a>
+            
+
         </h2>
         <p class="text-3xl pt-2 pl-6 font-thin">{{ role }}</p>
     </div>
