--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -118,6 +118,7 @@
                 localStorage.setItem('refresh_token', data.refresh);
                 localStorage.setItem('username', data.username);
                 localStorage.setItem('role', data.role ?? "user");
+                localStorage.setItem('display_name', data.display_name);
                 // Redirect to dashboard
                 if (role == 'user') {
                     window.location.href = "/";
