--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -29,8 +29,8 @@
             <div class="flex flex-col">
               <div
                 class="text-lg font-bold {% if request.path == '/admin-system/profile/' %} text-orange-500 font-bold{% endif %}">
-                PengPeng</div>
-              <div class="text-xs text-gray-900">Admin</div>
+                {{display_name}}</div>
+              <div class="text-xs text-gray-900">{{role}}</div>
             </div>
           </div>
         </a>
@@ -119,6 +119,20 @@
     </div>
     </div>
   </div>
+  <div id="editModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div class="bg-white p-6 rounded-xl shadow-lg w-80">
+      <h3 class="text-xl font-semibold mb-4">Edit Username</h3>
+      <form method="POST" action="{% url 'update_display_name' %}">
+        {% csrf_token %}
+        <input type="text" name="display_name" placeholder="New Display Name"
+            class="border border-gray-300 rounded w-full p-2 mb-4" required>             
+        <div class="flex justify-end gap-2">
+          <button type="button" onclick="closeModal()" class="px-4 py-2 bg-gray-300 rounded">Cancel</button>
+          <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded">Save</button>
+        </div>
+      </form>
+    </div>
+</div>
 </body>
 
 <script>
@@ -166,6 +180,15 @@
           window.location.href = "/login/";
         });
     });
+
+  function openModal() {
+      document.getElementById("editModal").classList.remove("hidden");
+  }
+
+  function closeModal() {
+      document.getElementById("editModal").classList.add("hidden");
+  }
+
 </script>
 
 </html>
