--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -1,170 +1,239 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=U, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    {% comment %}
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    {% endcomment %}
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>{% block title %}{% endblock %}</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=U, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
-  <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>{% block title %}{% endblock %}</title>
-</head>
+  <!-- Rest of your base.html remains the same -->
 
-<!-- Rest of your base.html remains the same -->
-
-<body>
-  <div class="flex flex-col h-screen">
-    <!-- Main Content (Navbar + Content) -->
-    <div>
-      <!-- Navbar (Full Width) -->
-      <div class="navbar bg-base-100 w-full border-b-2 border-base-900">
-        <a href="{% url 'profile' %}">
-          <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-            <div class="w-10 rounded-full">
-              <img alt="Tailwind CSS Navbar component" src="../../static/Profile.png" />
+  <body>
+    <div class="flex flex-col h-screen">
+      <!-- Main Content (Navbar + Content) -->
+      <div>
+        <!-- Navbar (Full Width) -->
+        <div class="navbar bg-base-100 w-full border-b-2 border-base-900">
+          <a href="{% url 'profile' %}">
+            <div
+              tabindex="0"
+              role="button"
+              class="btn btn-ghost btn-circle avatar"
+            >
+              <div class="w-10 rounded-full">
+                <img
+                  alt="Tailwind CSS Navbar component"
+                  src="../../static/Profile.png"
+                />
+              </div>
             </div>
-          </div>
-          <div class="pl-4">
-            <div class="flex flex-col">
-              <div
-                class="text-lg font-bold {% if request.path == '/admin-system/profile/' %} text-orange-500 font-bold{% endif %}">
-                PengPeng</div>
-              <div class="text-xs text-gray-900">Admin</div>
+            <div class="pl-4">
+              <div class="flex flex-col">
+                <div
+                  class="text-lg font-bold {% if request.path == '/admin-system/profile/' %} text-orange-500 font-bold{% endif %}"
+                >
+                  PengPeng
+                </div>
+                <div class="text-xs text-gray-900">Admin</div>
+              </div>
             </div>
+          </a>
+
+          <div class="divider divider-horizontal"></div>
+          <div class="flex flex-row justify-between w-full">
+            <div class="font-bold ml-4">{% block heading %}{% endblock %}</div>
+            <button class="btn btn-outline btn-error mr-4" id="logout-btn">
+              Logout
+            </button>
           </div>
-        </a>
-
-        <div class="divider divider-horizontal"></div>
-        <div class="flex flex-row justify-between w-full">
-          <div class="font-bold ml-4">{% block heading %}{% endblock %}</div>
-          <button class="btn btn-outline btn-error mr-4" id="logout-btn">Logout</button>
         </div>
 
+        <!-- Page Content -->
       </div>
+      <div class="flex flex-row h-full">
+        <!-- Sidebar (Left) -->
+        <div class="w-40 lg:w-60 bg-base-100 border-r-2 border-base-900">
+          <div class="mt-4">
+            <ul class="menu">
+              <li class="py-2">
+                <a
+                  href="{% url 'dashboard' %}"
+                  class="flex items-center {% if request.path == '/solar-system/dashboard/' %}bg-orange-100 text-orange-500 font-bold{% endif %}"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5 mr-2"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h16M4 18h7"
+                    />
+                  </svg>
+                  Dashboard
+                </a>
+              </li>
+              <li class="py-2">
+                <a
+                  href="{% url 'users_management' %}"
+                  class="flex items-center {% if request.path == '/solar-system/users_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5 mr-2"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"
+                    />
+                  </svg>
+                  Users Management
+                </a>
+              </li>
+              <li class="py-2">
+                <a
+                  href="{% url 'solar_management' %}"
+                  class="flex items-center {% if request.path == '/solar-system/solar_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5 mr-2"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+                    />
+                  </svg>
+                  Solar Management
+                </a>
+              </li>
+              <li class="py-2">
+                <a
+                  href="{% url 'upload_history' %}"
+                  class="flex items-center {% if request.path == '/solar-system/upload_history/' %}bg-orange-100 text-orange-500 font-bold{% endif %}"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5 mr-2"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"
+                    />
+                  </svg>
+                  Upload & History
+                </a>
+              </li>
+              <li class="py-2">
+                <a
+                  href="{% url 'reports' %}"
+                  class="flex items-center {% if request.path == '/solar-system/reports/' %}bg-orange-100 text-orange-500 font-bold{% endif %}"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5 mr-2"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+                    />
+                  </svg>
+                  Reports
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-      <!-- Page Content -->
+        <!-- Main Content Area -->
+        <div class="flex-1 flex items-center justify-center">
+          <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl">
+            <!-- Your content inside the box -->
+            {% block content %} {% endblock %}
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="flex flex-row h-full">
-      <!-- Sidebar (Left) -->
-      <div class="w-40 lg:w-60 bg-base-100 border-r-2 border-base-900">
-        <div class="mt-4">
-          <ul class="menu">
-            <li class="py-2">
-              <a href="{% url 'dashboard' %}"
-                class="flex items-center {% if request.path == '/solar-system/dashboard/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
-                </svg>
-                Dashboard
-              </a>
-            </li>
-            <li class="py-2">
-              <a href="{% url 'users_management' %}"
-                class="flex items-center {% if request.path == '/solar-system/users_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                </svg>
-                Users Management
-              </a>
-            </li>
-            <li class="py-2">
-              <a href="{% url 'solar_management' %}"
-                class="flex items-center {% if request.path == '/solar-system/solar_management/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
-                </svg>
-                Solar Management
-              </a>
-            </li>
-            <li class="py-2">
-              <a href="{% url 'upload_history' %}"
-                class="flex items-center {% if request.path == '/solar-system/upload_history/' %}bg-orange-100 text-orange-500 font-bold{% endif %}">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" />
-                </svg>
-                Upload & History
-              </a>
-            </li>
-            <li class="py-2">
-              <a href="{% url 'reports' %}"
-                class="flex items-center {% if request.path == '/solar-system/reports/' %}bg-orange-100  text-orange-500 font-bold{% endif %}">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24"
-                  stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                </svg>
-                Reports
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+  </body>
 
+  <script>
+    const tokenLocal = localStorage.getItem("access_token");
+    const tokenCookie = document.cookie
+      .split("; ")
+      .find((row) => row.startsWith("access_token="));
+    const token = tokenCookie ? tokenCookie.split("=")[1] : null;
 
-      <!-- Main Content Area -->
-      <div class="flex-1 flex items-center justify-center">
-        <div class="w-5/6 h-5/6 bg-base-100 shadow-2xl p-6 rounded-xl">
-          <!-- Your content inside the box -->
-          {% block content %} {% endblock %}
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
+    if (!tokenLocal && !token) {
+      window.location.href = "/login/";
+    }
 
-<script>
-  const tokenLocal = localStorage.getItem("access_token");
-  const tokenCookie = document.cookie
-    .split("; ")
-    .find((row) => row.startsWith("access_token="));
-  const token = tokenCookie ? tokenCookie.split("=")[1] : null;
+    document
+      .getElementById("logout-btn")
+      .addEventListener("click", function () {
+        const refreshToken = localStorage.getItem("refresh_token");
 
-  if (!tokenLocal && !token) {
-    window.location.href = "/login/";
-  }
-
-  document
-    .getElementById("logout-btn")
-    .addEventListener("click", function () {
-      const refreshToken = localStorage.getItem("refresh_token");
-
-      // Send request to Django API to blacklist refresh token
-      fetch("/api/logout/", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({ refresh: refreshToken }),
-      })
-        .then((response) => response.json())
-        .then((data) => {
-          console.log("Logout response:", data);
+        // Send request to Django API to blacklist refresh token
+        fetch("/api/logout/", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ refresh: refreshToken }),
         })
-        .catch((error) => {
-          console.error("Logout API error:", error);
-        })
-        .finally(() => {
-          // Clear tokens from localStorage
-          localStorage.removeItem("access_token");
-          localStorage.removeItem("refresh_token");
-          localStorage.removeItem("username");
-          localStorage.removeItem("role");
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Logout response:", data);
+          })
+          .catch((error) => {
+            console.error("Logout API error:", error);
+          })
+          .finally(() => {
+            // Clear tokens from localStorage
+            localStorage.removeItem("access_token");
+            localStorage.removeItem("refresh_token");
+            localStorage.removeItem("username");
+            localStorage.removeItem("role");
 
-          document.cookie =
-            "access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/; samesite=Lax";
+            document.cookie =
+              "access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/; samesite=Lax";
 
-          // Redirect to login page
-          window.location.href = "/login/";
-        });
-    });
-</script>
-
+            // Redirect to login page
+            window.location.href = "/login/";
+          });
+      });
+  </script>
 </html>
