--- a/myadmin/templates/base.html
+++ b/myadmin/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="bumblebee">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=U, initial-scale=1.0" />
@@ -9,7 +9,6 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
@@ -280,4 +279,3 @@
     }
   </script>
 </html>
-  
