some fix with re-implement dashboard frondend to be more reasonable

--- a/myadmin/templates/reports.html
+++ b/myadmin/templates/reports.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Admin - Users Management{% endblock%}
+{% extends 'base.html' %} {% block title %}Admin - Reports{% endblock%}
 {% block heading %}Reports{% endblock %} {% block content %}
 <div class="flex flex-row justify-between">
     <div class="flex flex-col">
